# aliri_braid

./: CHANGELOG.md  Cargo.toml  README.md  bors.toml  release-please-config.json
.github/workflows/: release-please.yml  release.yml  rust.yml
aliri_braid/: Cargo.toml  README.tpl
aliri_braid/src/: lib.rs
aliri_braid/tests/: basic.rs  jumble.rs  normalized.rs  too_many_braids.rs  validated.rs
aliri_braid/tests/common/: fallible.rs  infallible.rs  mod.rs  normalized.rs
aliri_braid_examples/: Cargo.toml
aliri_braid_examples/src/: bytes.rs  lib.rs  minimal.rs  normalized.rs  ref_only.rs  sso_wrapper.rs  validated.rs  wrapper.rs
aliri_braid_impl/: Cargo.toml  README.md
aliri_braid_impl/src/: borrow.rs  check_mode.rs  lib.rs  owned.rs  symbol.rs
aliri_braid_impl/src/borrow/: parameters.rs
aliri_braid_impl/src/codegen/: borrowed.rs  check_mode.rs  impls.rs  mod.rs  owned.rs  symbol.rs
aliri_braid_impl/src/impls/: borrowed.rs  owned.rs
aliri_braid_impl/src/owned/: parameters.rs
braid/: Cargo.toml
braid/src/: lib.rs
braid/tests/: basic.rs
braid/tests/common/: fallible.rs  infallible.rs  mod.rs
braid_impl/: Cargo.toml
braid_impl/src/: borrow.rs  lib.rs  owned.rs  symbol.rs
braid_impl/src/borrow/: parameters.rs
braid_impl/src/owned/: parameters.rs
