[package]
name = "aliri_braid"
description = "Improve and strengthen your strings by making them strongly-typed with less boilerplate"
keywords = [ "string", "newtype", "validation", "normalization" ]
categories = [ "data-structures", "rust-patterns" ]
version = "0.1.10"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri_braid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_braid_impl = { version = "=0.1.10", path = "../aliri_braid_impl" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1.0.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
static_assertions = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
