[package]
name = "aliri_braid"
description = "Improve and strengthen your strings by making them strongly-typed with less boilerplate"
keywords = [ "string", "newtype", "validation", "normalization" ]
categories = [ "data-structures", "rust-patterns" ]
version = "0.4.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri_braid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
aliri_braid_impl = { version = "=0.4.0", path = "../aliri_braid_impl" }

[dev-dependencies]
bytes = "1.6.0"
bytestring = "1.3"
compact_str = "0.7"
quickcheck = "1"
quickcheck_macros = "1.0.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
smartstring = "1"
static_assertions = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
