[package]
name = "aliri_braid_examples"
description = "Examples demonstrating usage of the `aliri_braid` crate"
keywords = [ "string", "newtype", "validation", "normalization" ]
categories = [ "data-structures", "rust-patterns" ]
version = "0.4.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri_braid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_braid = { version = "0.4.0", path = "../aliri_braid" }
bytes = "1"
bytestring = { version = "1.1", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
smartstring = { version = "1", features = [ "serde" ] }
compact_str = { version = "0.7", features = [ "serde" ] }
