[package]
name = "aliri_braid_impl"
description = "Implementation macros for the `aliri_braid` crate"
version = "0.2.2"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri_braid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
